Pushing most recent deployed image in the cluster

--- a/modules/common/added/conf/spark-defaults.conf
+++ b/modules/common/added/conf/spark-defaults.conf
@@ -27,3 +27,28 @@
 # spark.executor.extraJavaOptions  -XX:+PrintGCDetails -Dkey=value -Dnumbers="one two three"
 spark.ui.reverseProxy              true
 spark.ui.reverseProxyUrl           /
+spark.worker.cleanup.enabled       true
+spark.worker.cleanup.appDataTtl    3600 
+spark.worker.cleanup.enabled       true 
+#spark.deploy.defaultCores          10 
+spark.local.dir                    /scratch 
+spark.pyspark.python               /usr/bin/python3.6 
+spark.blockManager.port            8000
+spark.broadcast.port               8001
+spark.driver.port                  8002
+spark.executor.port                8003
+spark.fileserver.port              8004
+spark.replClassServer.port         8005
+spark.shuffle.service.port         8006
+spark.shuffle.service.enabled      true
+#·spark.scheduler.mode               FAIR 
+#spark.speculation                  true 
+#spark.dynamicAllocation.enabled    true 
+#spark.shuffle.service.enabled      true
+#spark.dynamicAllocation.minExecutors 1
+#spark.dynamicAllocation.maxExecutors infinity
+#spark.dynamicAllocation.executorAllocationRatio 1
+spark.shuffle.service.enabled      false
+spark.mongodb.input.uri            mongodb://10.130.2.30/
+spark.mongodb.input.database       coffeadb
+spark.mongodb.input.readPreference.name=primaryPreferred
